# inmoov-442

./: CMakeCache.txt  Collab.txt  InMoov.body  LICENSE  LeftLeg.body  N.body  ProtoPlugin.cpp  PrototypePlugin.cpp  README.md  act3.txt  floor.body  hw.cc  meaninglessTextFile.txt  simonmai
Controller/: CMakeLists.txt  InMoov.cnoid  InMoovController.cpp  InMoovPlugin.cpp
MVP/: CMakeLists.txt  InMoov.cnoid  InMoovPlugin.cpp  LEGS.body  MVP.cpp  MVP.cpp~  ManualMakefile  README.md
Model/: InMoov.cnoid  Model.body  README.md
Model/InMoovPlugin/: CMakeLists.txt  InMoovPlugin.cpp  ManualMakefile
Prototype/: CMakeLists.txt  InMoov.cnoid  PrototypePlugin.cpp  README.md
Prototype/MVP/: MVP.cpp
scripts/: BodyLinkView.cpp  InMoov (Ubuntu 14.04).out  InMoov.body  InMoov.cnoid  InMoov.cpp  InMoov.out  InMoovL.cnoid  InMoovN.cnoid  Run.sh  STLdirTodim.cpp  STLtoDim  STLtoDim.cpp  STLtoDim.cpp~  dims.csv  modifyLink.py  newLink.py  newModel.py  readDir  readDir.cpp  readDir.cpp~  rotation.py  translation.py
testModel/: testModel.body
testModel/parts/: CALVES_LEFT.wrl  CALVES_RIGHT.wrl  FOOT_RIGHT.wrl  KNEE_LEFT.wrl  KNEE_RIGHT.wrl  L_ANKLE.wrl  L_FOOT.wrl  L_HIP.wrl  L_KNEE.wrl  L_SHIN.wrl  L_THIGH.wrl  R_ANKLE.wrl  R_FOOT.wrl  R_HIP.wrl  R_KNEE.wrl  R_SHIN.wrl  R_THIGH.wrl  WAIST.wrl
